<resources>
    <string name="app_name">Login/Signup</string>
    <string name="name">Name</string>
    <string name="signIn">Sign In</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signUp">Sign Up</string>
    <string name="dontHaveAnAccount">Don\'t have an account?</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
